# Piscine_python

day0/: Avant de push  template.py
day0/ex00/: Hello.py
day0/ex01/: format_ft_time.py
day0/ex02/: find_ft_type.py
day0/ex03/: NULL_not_found.py
day0/ex04/: whatis.py
day0/ex05/: building.py
day0/ex06/: filterstring.py  ft_filter.py  tester.py
day0/ex07/: sos.py  tester.py
day0/ex08/: Loading.py  tester.py
day0/ex09/: LICENSE  Makefile  README.md  pyproject.toml
day0/ex09/src/ft_package/: __init__.py  ft_module.py
day0/ex09/tests/: test_add_one.py  test_count_in_list.py
