[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "LICENSE.txt"]
authors = [
  { name = "eagle", email = "eagle@42.fr" },
]
  
[project.urls]
homepage = "https://github.com/eagle/ft_package"
