[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
requires-python = ">=3.10"
description = "A sample test package"
readme = "README.md"
license = "MIT"
authors = [
   { name = "lpaquatt", email = "lpaquatt@42.fr" }
]
  
[project.urls]
homepage = "https://github.com/leontinepaq/Piscine_python/tree/main/day0/ex09"
